--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -570,10 +570,10 @@ section {
   color: #fff;
 }
 .services .iconbox-yellow i {
-  color: #ffbb2c;
+  color: #06b6d4;
 }
 .services .iconbox-yellow:hover .icon {
-  background: #ffbb2c;
+  background: #06b6d4;
 }
 .services .iconbox-yellow:hover .icon i {
   color: #fff;
